[package]
name = "trpfs-extractor"
version = "0.1.0"
edition = "2021"
authors = ["equation314 <equation618@gmail.com>"]
repository = "https://github.com/equatoin314/trpfs-extractor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
cc = { version = "1.0" }
